--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <header class="header-home">
+    <header id="header-home">
         <div class="container">
             <nav id="main-nav">
-                <h2 id="logo" class="fancy-font">KL Resume</h2>
+                <h2 id="logo" class="main-logo"><i class="fas fa-project-diagram"></i> KL Resume</h2>
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -25,12 +25,12 @@
 
             </nav>
             <div class="header-content">
-                <h1>I am Ken Laidlaw, <span class="txt-type" data-wait="3000"
+                <h1>I am Ken Laidlaw, <span class="txt-type" data-wait="2000"
                         data-words='["Web designer", "App designer", "Programmer"]'></span></h1>
                 <p class="lead">
-                    I specialise in Web design, front and back end and applications design for your lifestyle
+                    I specialise in front and back end Web design, programming and applications design
                 </p>
-                <a href="work.html" class="btn-light">View my work</a>
+                <a href="work.html" class="btn-main">View my work</a>
             </div>
         </div>
     </header>
