--- a/about.html
+++ b/about.html
@@ -5,33 +5,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f09c3b6f37.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>Ken Laidlaw - Resume</title>
 </head>
 
 <body>
-    <header>
+    <header id="header-inner">
         <div class="container">
             <nav id="main-nav">
-                <h2 class="logo fancy-font">KL Resume</h2>
-                <div class="menu">
-                    <ul>
-                        <li><a href="index.html" class="current">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="#contactme">Contact me</a></li>
-                    </ul>
-                </div>
+                <h2 id="logo" class="main-logo fancy-textb"><i class="fas fa-project-diagram"></i> Ken L</h2>
+                <ul class="fancy-textb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="current">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="#contactme">Contact</a></li>
+                </ul>
+
             </nav>
         </div>
-        <div id="showcase">
-            <h1>I am Ken Laidlaw, Web developer, App developer, Freelancer</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In accusamus eligendi nihil at! Exercitationem
-                incidunt cumque necessitatibus, odit distinctio explicabo accusantium, a corrupti reiciendis blanditiis
-                molestiae obcaecati totam inventore quia.</p>
-        </div>
-
     </header>
+
+    <!-- homepage section c - contacts -->
+    <section id="home-c" class="text-center py-3">
+        <div class="container">
+            <h2 class="section-title">Contact Me</h2>
+            <div class="bottom-line"></div>
+            <p class="lead">Here is how you can reach me</p>
+
+            <form action="">
+                <div class="text-fields">
+                    <input type="text" class="text-input name-input" placeholder="Name">
+                    <input type="text" class="text-input subject-input" placeholder="Subject">
+                    <input type="email" class="text-input email-input" placeholder="Emai Address">
+                    <input type="text" class="text-input phone-input" placeholder="Phone Number">
+                    <textarea class="text-input message-input" placeholder="Enter Message"></textarea>
+                </div>
+                <button type="submit" class="btn-main">Submit</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer id="main-footer">
+        <div class="footer-content container">
+            <p>Copyright &copy; 2020, All Rights Reserved</p>
+            <div class="social">
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-linkedin"></i>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/typewriter.js"></script>
 </body>
 
 </html>
