--- a/projects.html
+++ b/projects.html
@@ -19,14 +19,101 @@
                 <h2 id="logo" class="main-logo fancy-textb"><i class="fas fa-project-diagram"></i> Ken L</h2>
                 <ul class="fancy-textb">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html>About</a></li>
-                    <li><a href=" portfolio.html" class="current">Portfolio</a></li>
-                    <li><a href="#contactme">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html" class="current">Portfolio</a></li>
+                    <li><a href="#home-c">Contact</a></li>
                 </ul>
 
             </nav>
         </div>
     </header>
+    <!-- Section A Gallery -->
+    <section id="work-a" class="text-center py-3">
+        <div class="container">
+            <h2 class="section-title">My Work</h2>
+            <div class="bottom-line"></div>
+            <p class="lead">Below are a selection of completed projects I have been working on and maintaining. For
+                further information about ongoing projects and development ideas click the button below to go to my main
+                site.</p>
+            <a href="www.klapps.co.uk" class="btn-dark">KLAPPS</a>
+
+            <div class="items">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="img/kjl.jpg" alt="">
+                    </div>
+                    <div class="item-text">
+                        <div class="item-text-wrap">
+                            <p class="item-text-category">Placeholder</p>
+                            <h2 class="item-text-title">placeholder image</h2>
+                            <p class="skilss-used">HTML, CSS & SASS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image">
+                        <img src="img/kjl.jpg" alt="">
+                    </div>
+                    <div class="item-text">
+                        <div class="item-text-wrap">
+                            <p class="item-text-category">Placeholder</p>
+                            <h2 class="item-text-title">placeholder image</h2>
+                            <p class="skilss-used">HTML, CSS & SASS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image">
+                        <img src="img/kjl.jpg" alt="">
+                    </div>
+                    <div class="item-text">
+                        <div class="item-text-wrap">
+                            <p class="item-text-category">Placeholder</p>
+                            <h2 class="item-text-title">placeholder image</h2>
+                            <p class="skilss-used">HTML, CSS & SASS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image">
+                        <img src="img/kjl.jpg" alt="">
+                    </div>
+                    <div class="item-text">
+                        <div class="item-text-wrap">
+                            <p class="item-text-category">Placeholder</p>
+                            <h2 class="item-text-title">placeholder image</h2>
+                            <p class="skilss-used">HTML, CSS & SASS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image">
+                        <img src="img/kjl.jpg" alt="">
+                    </div>
+                    <div class="item-text">
+                        <div class="item-text-wrap">
+                            <p class="item-text-category">Placeholder</p>
+                            <h2 class="item-text-title">placeholder image</h2>
+                            <p class="skilss-used">HTML, CSS & SASS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-image">
+                        <img src="img/kjl.jpg" alt="">
+                    </div>
+                    <div class="item-text">
+                        <div class="item-text-wrap">
+                            <p class="item-text-category">Placeholder</p>
+                            <h2 class="item-text-title">placeholder image</h2>
+                            <p class="skilss-used">HTML, CSS & SASS</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <!-- homepage section c - contacts -->
     <section id="home-c" class="text-center py-3">
@@ -61,7 +148,7 @@
         </div>
     </footer>
 
-    <script src="js/typewriter.js"></script>
+
 </body>
 
 </html>
