--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
                 <ul class="fancy-textb">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="current">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="#contactme">Contact</a></li>
+                    <li><a href="projects.html">Portfolio</a></li>
+                    <li><a href="#home-c">Contact</a></li>
                 </ul>
 
             </nav>
@@ -61,7 +61,7 @@
         </div>
     </footer>
 
-    <script src="js/typewriter.js"></script>
+
 </body>
 
 </html>
