--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <ul class="fancy-textb">
                     <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="#contactme">Contact</a></li>
+                    <li><a href="projects.html">Portfolio</a></li>
+                    <li><a href="#home-c">Contact</a></li>
                 </ul>
 
             </nav>
