--- a/about.html
+++ b/about.html
@@ -27,6 +27,72 @@
             </nav>
         </div>
     </header>
+    <section id="about-a" class="text-center py-2">
+        <div class="container">
+            <h2 class="section-title">A little about me</h2>
+            <div class="bottom-line"></div>
+            <div class="about-me">
+                <img src="img/kjl.jpg" alt="" class="bio-image">
+                <div class="bio bg-light">
+                    <h3>A wealth of experience in many areas</h3>
+                    <div class="bottom-line"></div>
+                    <p class="py-1">
+                        I have 30 years experience in retail business, project management and account management within
+                        a blue chip company. I have taken the opportunity of redundancy to take my career in a different
+                        direciton towards web and app design. I believe my existing skill sets will serve me well in
+                        programming and app design allowing me to interpret client needs from a position of business
+                        experience enabling me to meet the end goals of my clients.
+                    </p>
+                    <p class="py-1">
+                        In my free time when I am not tinkering with code I am an Ironman triathlete and you can find me
+                        either running, on my bike or in the warmer weather swimming outdoors around the lochs of
+                        Scotland. In my less energetic pursuits I still enjoy a good computer game and have enjoyed
+                        online MMO games for over 20 years. Finally, I am looking forward to completing my economics
+                        degree this year that I have been completing while in full-time work.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="about-b" class="text-center py-2">
+        <div class="container">
+            <div class="about-skills">
+
+                <div class="logos">
+                    <img src="img/mark-word-icon.png" alt="HTML logo">
+                    <img src="img/css-logo.png" alt="CSS logo">
+                    <img src="img/JavaScript-Logo.png" alt="javascript">
+                    <img src="img/python-logo.png" alt="Python">
+                    <img src="img/csharp-icon-clipart-8.jpg" alt="Csharp">
+                    <img src="img/768px-.NET_Logo.svg.png" alt=".NET logo">
+                </div>
+                <div class="skills">
+                    <h4>General Skills</h4>
+                    <div class="bottom-line"></div>
+                    <ul>
+                        <li>Project Management</li>
+                        <li>Project Management</li>
+                        <li>Project Management</li>
+                        <li>Project Management</li>
+                        <li>Project Management</li>
+                        <li>Project Management</li>
+                    </ul>
+                </div>
+                <div class="certs">
+                    <h4>Qualifications</h4>
+                    <div class="bottom-line"></div>
+                    <ul>
+                        <li>BA Economics</li>
+                        <li>Brad Traversy-HTML, CSS & SASS</li>
+                        <li>Project Management</li>
+                        <li>Project Management</li>
+                        <li>Project Management</li>
+                        <li>Project Management</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- homepage section c - contacts -->
     <section id="home-c" class="text-center py-3">
