--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
             </nav>
         </div>
     </header>
+
     <section id="about-a" class="text-center py-2">
         <div class="container">
             <h2 class="section-title">A little about me</h2>
@@ -71,11 +72,12 @@
                     <div class="bottom-line"></div>
                     <ul>
                         <li>Project Management</li>
-                        <li>Project Management</li>
-                        <li>Project Management</li>
-                        <li>Project Management</li>
-                        <li>Project Management</li>
-                        <li>Project Management</li>
+                        <li>Program Management</li>
+                        <li>Account Managment</li>
+                        <li>Contract Negotiation</li>
+                        <li>Marketing</li>
+                        <li>Economics</li>
+                        <li>Electric Vehichle instlations</li>
                     </ul>
                 </div>
                 <div class="certs">
@@ -84,10 +86,7 @@
                     <ul>
                         <li>BA Economics</li>
                         <li>Brad Traversy-HTML, CSS & SASS</li>
-                        <li>Project Management</li>
-                        <li>Project Management</li>
-                        <li>Project Management</li>
-                        <li>Project Management</li>
+
                     </ul>
                 </div>
             </div>
