first page commit

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                         <li>Contract Negotiation</li>
                         <li>Marketing</li>
                         <li>Economics</li>
-                        <li>Electric Vehichle instlations</li>
+                        <li>Electric Vehicle installations</li>
                     </ul>
                 </div>
                 <div class="certs">
